--- a/index.html
+++ b/index.html
@@ -2,25 +2,70 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Proof of a Concord Kept</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Reset -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
-    <!-- Styles -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <!-- Javascript -->
-    <script src="./assets/javascript/game.js" />
+    <script src="./assets/javascript/game.js"></script>
+    <link rel="shortcut icon" href="./assets/images/sunlight_medal.png" type="image/x-icon" />
 </head>
 
-<body>
+<body class="container">
 
+    <header class="header text-center">
+        <h1>Proof of a Concord Kept</h1>
+        <h4>A Dark Souls Themed Collector Game</h4>
+    </header>
 
+    <!-- =====GAME RULES===== -->
+    <div>
+        <p>
+            The game begins with a random number of Proofs of a Concord you need to collect.
+            <br>
+            <br> There are four covenants you can join, each will grant you a random number of Proofs to add to your collection.
+            <br>
+            <br> Your goal to collect the exact amount of Proofs that have been shown.
+            <br>
+            <br> Be careful. If you collect too many Proofs, you'll be the target of Dark Phantoms, and you'll loose.
+            <br>
+            <br> Your Wins and Losses are tallied at the end of each game. And when the game resets all covenant values and your
+            target collection will change.
+        </p>
+        <!-- If you have no idea what any of this means, just ask Scott, he can explain it all. -->
+    </div>
+
+    <!-- =====TARGET NUMBER===== -->
+    <div id="target-number"></div>
+
+    <!-- =====WIN/LOSS COUNTERS===== -->
+    <div>
+        <ul>
+            <li>Victories:
+                <h5 id="win-counter"></h5>
+            </li>
+            <li>Deaths:
+                <h5 id="loss-counter"></h5>
+            </li>
+        </ul>
+    </div>
+
+    <!-- =====COVENANTS===== -->
+    <div>
+        <img id="cov-1" src="./assets/images/blade_of_the_darkmoon.png" alt="Blade of the Darkmoon" />
+        <img id="cov-2" src="./assets/images/rosarias_fingers.png" alt="Rosarias Fingers" />
+        <img id="cov-3" src="./assets/images/warrior_of_sunlight.png" alt="Warrior of Sunlight" />
+        <img id="cov-4" src="./assets/images/watchdogs_of_farron.png" alt="Watchdogs of Farron" />
+    </div>
+
+    <!-- =====CURRENT SCORE===== -->
+    <div>
+        <h4>Your Collected Proofs:</h4>
+        <h3 id="current-score"></h3>
+    </div>
 
 </body>
 
