--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Proof of a Concord Kept</title>
+    <title>Tokens of Victory</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -17,7 +17,7 @@
 <body class="container">
 
     <header class="header text-center">
-        <h1>Proof of a Concord Kept</h1>
+        <h1>Tokens of Victory</h1>
         <h4>A Dark Souls Themed Collector Game</h4>
     </header>
 
@@ -25,13 +25,13 @@
         <!-- =====GAME RULES===== -->
         <div class="my-container col">
             <p>
-                The game begins with a random number of Proofs of a Concord you need to collect.
+                The game begins with a random number of Tokens you need to collect.
                 <br>
-                <br> There are four covenants you can join, each will grant you a random number of Proofs to add to your collection.
+                <br> There are four covenants you can join, each will grant you a random number of Tokens to add to your collection.
                 <br>
-                <br> Your goal to collect the exact same amount of Proofs as your target.
+                <br> Your goal to collect the exact same amount of Tokens as your target.
                 <br>
-                <br> Be careful. If you collect too many Proofs, you'll be the target of Dark Phantoms, and you'll loose.
+                <br> Be careful. If you collect too many Tokens, you'll be the target of Dark Phantoms, and you'll loose.
                 <br>
                 <br> Your Wins and Losses are tallied at the end of each game. When the game resets all covenant values and your
                 target value will change.
@@ -65,7 +65,7 @@
     <div class="row">
         <!-- =====CURRENT SCORE===== -->
         <div class="my-container col">
-            <h4>Your Collected Proofs:</h4>
+            <h4>Your Collected Tokens:</h4>
             <h3 id="current-score"></h3>
         </div>
 
