--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="container">
-    <header class="header text-center">
+    <header class="header text-center p-3">
         <h1>Tokens of Victory</h1>
         <h4>A Dark Souls Themed Collector Game</h4>
     </header>
