GAME IS WORKING!!!

--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
     </div>
     <div class="row">
         <!-- =====CURRENT SCORE===== -->
-        <div class="my-container col">
+        <div class="my-container col text-center">
             <h4>Your Collected Tokens:</h4>
-            <h3 id="current-score"></h3>
+            <h2 id="current-score"></h2>
         </div>
         <!-- =====TARGET NUMBER===== -->
-        <div class="my-container col">
+        <div class="my-container col text-center">
             <h4>Your Target:</h4>
-            <h3 id="target-number"></h3>
+            <h2 id="target-number"></h2>
         </div>
         <!-- =====WIN/LOSS COUNTERS===== -->
-        <div class="my-container col">
-            <ul>
-                <li>Victories:
-                    <h5 id="win-counter"></h5>
+        <div class="my-container col text-center">
+            <ul class="list-inline">
+                <li class="list-inline-item">Victories:
+                    <h2 id="win-counter"></h2>
                 </li>
-                <li>Deaths:
-                    <h5 id="loss-counter"></h5>
+                <li class="list-inline-item">Deaths:
+                    <h2 id="loss-counter"></h2>
                 </li>
             </ul>
         </div>
