FINAL final touches

--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
         <!-- =====WIN/LOSS COUNTERS===== -->
         <div class="my-container col text-center">
             <ul class="list-inline mb-0">
-                <li class="list-inline-item mx-3"><h6>Victories:</h6>
+                <li class="list-inline-item mx-3">
+                    <h6>Victories:</h6>
                     <h2 id="win-counter"></h2>
                 </li>
-                <li class="list-inline-item mx-3"><h6>Deaths:</h6>
+                <li class="list-inline-item mx-3">
+                    <h6>Deaths:</h6>
                     <h2 id="loss-counter"></h2>
                 </li>
-                <li class="list-inline-item mx-3"><h6>Humanity:</h6>
+                <li class="list-inline-item mx-3">
+                    <h6>Humanity:</h6>
                     <h2 id="humanity">00</h2>
                     <!-- This is a Dark Souls reference. Trust me, it's hilarious. -->
                 </li>
