I added one more thing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <br>
                 <br> Your goal to collect the exact same amount of Tokens as your target.
                 <br>
-                <br> Be careful. If you collect too many Tokens, you'll be the target of Dark Phantoms, and you'll loose.
+                <br> Be careful. If you collect too many Tokens, you'll be the target of Black Phantoms, and you'll loose.
                 <br>
                 <br> Your Wins and Losses are tallied at the end of each game. When the game resets all covenant values and your
                 target value will change.
